k8s/whoami/patch-deploy-rolling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
