k8s/whoami/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - whoami.int.emxlab.dev
    secretName: whoami-tls  # cert-manager legt/füllt dieses Secret an
  rules:
  - host: whoami.int.emxlab.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
